// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stats.styles StatItem should match the snapshot 1`] = `
.c0 {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 16px;
}

<div
  class="c0"
/>
`;

exports[`stats.styles StatLabel should match the snapshot with dark theme 1`] = `
.c0 {
  font-size: 16px;
  font-family: Inter-Regular;
  color: #a3a3a3;
  margin-top: 0px;
  font-weight: normal;
  text-transform: none;
  cursor: text;
}

.c1 {
  margin: 0;
  text-align: center;
}

<p
  class="c0 c1"
>
  Projects
</p>
`;

exports[`stats.styles StatLabel should match the snapshot with light theme 1`] = `
.c0 {
  font-size: 16px;
  font-family: Inter-Regular;
  color: #8f95a3;
  margin-top: 0px;
  font-weight: normal;
  text-transform: none;
  cursor: text;
}

.c1 {
  margin: 0;
  text-align: center;
}

<p
  class="c0 c1"
>
  Projects
</p>
`;

exports[`stats.styles StatNumber should match the snapshot with dark theme 1`] = `
.c0 {
  font-size: 30px;
  font-family: Inter-Bold;
  color: #F0F2F1;
  margin-top: 0px;
  font-weight: normal;
  text-transform: none;
  cursor: text;
}

.c1 {
  margin: 0;
}

<h2
  class="c0 c1"
>
  10+
</h2>
`;

exports[`stats.styles StatNumber should match the snapshot with light theme 1`] = `
.c0 {
  font-size: 30px;
  font-family: Inter-Bold;
  color: #000000;
  margin-top: 0px;
  font-weight: normal;
  text-transform: none;
  cursor: text;
}

.c1 {
  margin: 0;
}

<h2
  class="c0 c1"
>
  10+
</h2>
`;

exports[`stats.styles StatsContainer should match the snapshot with dark theme 1`] = `
.c0 {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  padding: 80px 120px;
  background-color: #121212;
  border-top: 1px solid #323741;
}

<section
  class="c0"
/>
`;

exports[`stats.styles StatsContainer should match the snapshot with light theme 1`] = `
.c0 {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  padding: 80px 120px;
  background-color: #fcfcfc;
  border-top: 1px solid #D9DDDB;
}

<section
  class="c0"
/>
`;
